Started to add Edit Shift Model, fix issues with Shift operations

--- a/employee-rostering-frontend/src/ui/pages/shift/BigCalendarSchedule.css
+++ b/employee-rostering-frontend/src/ui/pages/shift/BigCalendarSchedule.css
@@ -21,3 +21,11 @@
     color: black;
     background-color: #bee1f4;
 }
+
+.rbc-allday-cell {
+    display: none;
+}
+  
+.rbc-time-view .rbc-header {
+    border-bottom: none;
+}
